<resources>
    <string name="app_name">KodeTestApp</string>
    <string name="search_bar_hint">Введите имя, тег, почту…</string>
    <string name="sorting">sorting</string>
    <string name="clear">clear</string>
    <string name="cancel">Отмена</string>
    <string name="all">Все</string>
    <string name="sorting_text">Сортировка</string>
    <string name="by_alphabet">По алфавиту</string>
    <string name="by_birthday">По дню рождения</string>
    <string name="we_didnt_find_anyone">Мы никого не нашли</string>
    <string name="try_to_adjust_the_request">Попробуй скорректировать запрос</string>

    <string-array name="departments">
        <item>Все</item>
        <item>Дизайн</item>
        <item>Аналитика</item>
        <item>Менеджмент</item>
        <item>iOS</item>
        <item>Android</item>
        <item>QA</item>
        <item>Бэк-офис</item>
        <item>Frontend</item>
        <item>HR</item>
        <item>PR</item>
        <item>Backend</item>
        <item>Техподдержка</item>
    </string-array>
    <string name="critical_error">Критическая ошибка</string>
    <string name="some_supermind_broke_everything">Какой-то сверхразум все сломал</string>
    <string name="we_will_try_to_fix_it_quickly">Постараемся быстро починить</string>
    <string name="try_again">Попробовать снова</string>
    <string name="loading">Секундочку, гружусь…</string>
</resources>