<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.CriticalErrorFragment">

    <ImageView
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:contentDescription="@string/critical_error"
        android:src="@drawable/flying_saucer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/some_supermind_broke_everything"
        android:textAppearance="@style/TextAppearance.Title3.Semibold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/we_will_try_to_fix_it_quickly"
        android:textAppearance="@style/TextAppearance.Headline.Regular.TertiaryColor" />

    <TextView
        android:id="@+id/critical_error_try_again_button"
        style="@style/TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/try_again"
        android:textAppearance="@style/TextAppearance.Headline.Semibold.ActivePrimaryColor" />
</LinearLayout>