<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainScreenFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/main_screen_search_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="6dp"
                android:autofillHints="name"
                android:hint="@string/search_bar_hint"
                android:inputType="text"
                app:layout_constraintEnd_toStartOf="@id/main_screen_cancel_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/main_screen_sorting_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sorting"
                android:src="@drawable/ic_sorting"
                app:layout_constraintBottom_toBottomOf="@id/main_screen_search_bar"
                app:layout_constraintEnd_toEndOf="@id/main_screen_search_bar"
                app:layout_constraintTop_toTopOf="@id/main_screen_search_bar" />

            <ImageButton
                android:id="@+id/main_screen_clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/clear"
                android:src="@drawable/ic_clear"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/main_screen_search_bar"
                app:layout_constraintEnd_toEndOf="@id/main_screen_search_bar"
                app:layout_constraintTop_toTopOf="@id/main_screen_search_bar" />

            <TextView
                android:id="@+id/main_screen_cancel_button"
                style="@style/TextButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="28dp"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAppearance="@style/TextAppearance.Subhead.Semibold.ActivePrimaryColor"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/main_screen_search_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/main_screen_search_bar"
                tools:visibility="visible" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/main_screen_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_screen_search_bar" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/main_screen_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/main_screen_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="12dp" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>